[gd_scene load_steps=7 format=3 uid="uid://cpul46s4ig5ep"]

[ext_resource type="Script" uid="uid://dkqdt6pl6yh70" path="res://Scenes/card_sharp.gd" id="1_m21jd"]
[ext_resource type="Texture2D" uid="uid://bil52epy3fcq7" path="res://Assets/PNG-cards-1.3/king_of_spades2.png" id="2_m21jd"]
[ext_resource type="FontFile" uid="uid://wjtial1f50wv" path="res://Assets/Cinzel-Bold.ttf" id="3_ixmsr"]
[ext_resource type="StyleBox" uid="uid://25f06d3wx5kb" path="res://Assets/Button_style_box.tres" id="4_xabc2"]
[ext_resource type="StyleBox" uid="uid://cn5k1t1mloygf" path="res://Assets/Button_style_pressed.tres" id="5_wmmly"]
[ext_resource type="StyleBox" uid="uid://bpxwbwsgjuesr" path="res://Assets/Button_style_hoverd.tres" id="6_etce0"]

[node name="CardSharp" type="Button" groups=["cards"]]
offset_right = 100.0
offset_bottom = 130.0
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
script = ExtResource("1_m21jd")

[node name="Card_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("2_m21jd")
expand_mode = 1

[node name="Discription_Box" type="Panel" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.0
offset_right = 228.0
offset_bottom = 131.0

[node name="Name" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_ixmsr")
text = "Card SHARP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discription" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 21.0
offset_right = 124.0
offset_bottom = 131.0
theme_override_fonts/font = ExtResource("3_ixmsr")
theme_override_font_sizes/font_size = 14
text = "Gain an Option to reroll once per round"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buy_btn" type="Button" parent="Discription_Box"]
layout_mode = 0
offset_left = -76.0
offset_top = 104.0
offset_right = -30.0
offset_bottom = 129.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ixmsr")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = ExtResource("4_xabc2")
theme_override_styles/hover_pressed_mirrored = ExtResource("5_wmmly")
theme_override_styles/hover_pressed = ExtResource("5_wmmly")
theme_override_styles/hover_mirrored = ExtResource("6_etce0")
theme_override_styles/hover = ExtResource("6_etce0")
theme_override_styles/pressed_mirrored = ExtResource("5_wmmly")
theme_override_styles/pressed = ExtResource("5_wmmly")
theme_override_styles/normal_mirrored = ExtResource("4_xabc2")
theme_override_styles/normal = ExtResource("4_xabc2")
text = "-$0"

[connection signal="pressed" from="." to="." method="_on_pressed"]
